--- a/flapp/templates/output.html
+++ b/flapp/templates/output.html
@@ -62,13 +62,13 @@
         <br>
         <h3>Your complaint</h3>
         <h3>has a</h3>
-        <h2>{{the_result}}% chance of success*</font></h2>
+        <h2>{{the_result}}% chance of obtaining relief*</font></h2>
         <br>
         <br>
         <h3 align="left">How to optimize your complaint?</h3>
         <p align="left">NarOpt examines the structure and words in your complaint to predict whether you are likely to receive relief from the financial institution. We compare your complaint against those that were successful to help you think about how to structure your complaint.</p>
 
-	<p align="left">Ideally, your complaint will mimic those that were previously successful. If your complaint has large red bars, then your complaint is quite different from those that were successful. </p>
+	<p align="left">Ideally, your complaint will mimic those that were previously successful. If your complaint has long red bars to the left, then your complaint has fewer of these features than typical successful complaints. If your narrative has long red bars to the right, then your complaint has more of these features than successful complaints. You want to aim for your complaint (the red bars) to mimic the blue bars. </p>
 
       </div>
       
@@ -77,9 +77,13 @@
       <div align="left">
         <br>
         
-        <p align="left">Determiners are words like "a", "an", and "the" that do not add contextual meaning, but offer clarity in your writing. You want your complaint to be easy to read and follow.</p>
-        <p align="left">Sentiment is the emotion your convey in your narrative. Successful complaints are often positive, so you want your complaint to be positive and get your point across, without being negative or angry.</p>
-        <p alight="left">Adjectives modify nouns, that is, they allow the person reading your narrative to paint a picture in their head. You want your narrative to be descriptive so that the person reading your complaint understands you.</p>
+        <p align="left">Sentiment is the emotion your convey in your narrative. Successful complaints are often positive, so you want your complaint to be positive and get your point across, without being negative or angry.</p> 
+        <p align="left">Symbols are characters that are neither letters or numerals, but still communicate ideas. These can be things such as $ or % that can give meaning to your narrative.</p>
+	<p align="left">Determiners are words like "a", "an", and "the" that do not add contextual meaning, but offer clarity in your writing. You want your complaint to be easy to read and follow.</p>
+        <p align="left">Punctuation helps break up your narrative complaint into shorter chunks. Characters that end sentences, such as . ! or ? or break up your writing (e.g. a comma) can help the readability of your complaint.</p>      
+        <p align="left">Adjectives modify nouns, that is, they allow the person reading your narrative to paint a picture in their head. You want your narrative to be descriptive so that the person reading your complaint understands you.</p>
+        <p align="left">Verbs help string together your thoughts by introducing action into your narrative complaint. You want your complaint to demonstrate the actions you look to solve your problem before contacting the financial institution via the CFPB.</p>
+        <p align="left">After you've got your complaint optimized, head on over to the CFPB to file a complaint!: <a href=https://www.consumerfinance.gov/complaint/getting-started/>CFPB Submission Form</a>
         <h4 align="left">*This tool has a precision of 0.52. It does not consider whether you have a valid complaint. Instead, it examines the structure of your complaint and the words you use to predict whether or not you will be successful in receiving relief.</h4><br>
         </p>
       </div>
